kubernetes/platform/gitops/backstage/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: backstage
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https-443
  hostnames: ["backstage.timourhomelab.org"]
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: backstage
          port: 7007
