kubernetes/platform/gitops/backstage/base/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backstage-ingress
  namespace: backstage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: backstage
  ingress:
    - fromEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: gateway }
        - matchLabels: { io.kubernetes.pod.namespace: cloudflared }
      toPorts:
        - ports: [{port: "7007", protocol: TCP}]
    - fromEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: monitoring }
      toPorts:
        - ports: [{port: "7007", protocol: TCP}]
    - fromEntities: [host]
      toPorts: [{ports: [{port: "7007", protocol: TCP}]}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backstage-egress
  namespace: backstage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: backstage
  egress:
    # PFLICHT: DNS
    - toEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns }
      toPorts:
        - ports: [{port: "53", protocol: UDP}, {port: "53", protocol: TCP}]
          rules: { dns: [{matchPattern: "*"}] }
    - toEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: backstage, cnpg.io/cluster: backstage-db }
      toPorts: [{ports: [{port: "5432", protocol: TCP}]}]
    - toEntities: [kube-apiserver]
      toPorts: [{ports: [{port: "6443", protocol: TCP}]}]
    - toEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: argocd }
      toPorts: [{ports: [{port: "443", protocol: TCP}, {port: "8080", protocol: TCP}]}]
    - toFQDNs:
        - matchName: api.github.com
        - matchPattern: "*.github.com"
        - matchName: iam.timourhomelab.org
        - matchName: argo.timourhomelab.org
        - matchName: grafana.timourhomelab.org
        - matchName: jaeger.timourhomelab.org
      toPorts: [{ports: [{port: "443", protocol: TCP}]}]
